--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>TinDog</title>
+  <title>Puppy Shop</title>
   <!-- google font -->
   <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet"> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
       <!-- Nav Bar -->
 
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="">Tindog</a>
+        <a class="navbar-brand" href="">Puppy Shop</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -54,7 +54,7 @@
           <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fa-brands fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6">
-          <img class="title-image" src="iphone6.png" alt="iphone-mockup">
+          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
   </section>
@@ -93,13 +93,13 @@
     <div id="testinomial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <h2><b>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</b></h2>
-          <img class="testimonial-image" src="dog-img.jpg" alt="dog-profile">
+          <h2><b>I no longer have to sniff other dogs for love. I've found the hottest Corgi on Puppy Shop. Woof.</b></h2>
+          <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item">
-          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-          <img class="testimonial-image" src="lady-img.jpg" alt="lady-profile">
+          <h2 class="testimonial-text">My dog used to be so lonely, but with Puppy Shop's help, they've found the love of their life. I think.</h2>
+          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
         </div>
       </div>
@@ -122,10 +122,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-logo" src="TechCrunch.png" alt="tc-logo">
-    <img class="press-logo" src="tnw.png" alt="tnw-logo">
-    <img class="press-logo" src="bizinsider.png" alt="biz-insider-logo">
-    <img class="press-logo" src="mashable.png" alt="mashable-logo">
+    <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
@@ -207,7 +207,7 @@
     <i class=" icon2 fa-brands fa-linkedin"></i>
     <i class="icon2 fa-brands fa-instagram-square"></i>
     <i class="icon2 fa-brands fa-facebook"></i>
-    <p>© Copyright 2022 TinDog</p>
+    <p>© Copyright 2022 Puppy Shop</p>
 
   </footer>
 
